# jellyfin-ambilight

./: .env  .gitignore  AMB3_FORMAT_ROADMAP.md  CHANGELOG.md  Dockerfile  Dockerfile.daemon  Dockerfile.extractor  Dockerfile.player  HOMELAB-SETUP.md  INSTALLATION.md  Jellyfin.Plugin.Ambilight.csproj  PUBLISHING.md  Plugin.cs  PluginConfiguration.cs  README.md  RELEASE_NOTES_v1.3.0.md  ambilight-daemon-cv2.py  ambilight-daemon-extractor.py  ambilight-daemon-files.py  ambilight-daemon-player.py  ambilight-daemon.py  ambilight-service.py  analyze-specific-packet.py  analyze-stored-packets.py  animate-udp-frames.py  cycle-frames.py  detect-black-borders.py  dns-troubleshoot.md  docker-compose-host.yml  docker-compose.yml  env.device-pairing-example  env.example  env.homelab  env.homeserver  fix-wled-frozen.py  index.json  list-jellyfin-devices.py  list_items_with_binaries.py  manifest.json  quick-device-check.py  (+26 more)
Api/: AmbilightController.cs
Configuration/: configPage.html  managerPage.html
Server/: AmbilightEntryPoint.cs  AmbilightServiceRegistrator.cs
Services/: AmbilightExtractorService.cs  AmbilightInProcessExtractor.cs  AmbilightInProcessPlayer.cs  AmbilightPlaybackService.cs  AmbilightStorageService.cs  EmbeddedBinariesResolver.cs
Tasks/: ExtractPendingAmbilightTask.cs
ambilight-extractor/: Cargo.toml
ambilight-extractor/src/: main.rs
ambilight-player/: Cargo.toml
frames/: fast_extractor.py  fast_extractor_pure.py  frame-extractor-files.py  frame-extractor.py
jellyfin-plugin-ambilight/: .gitignore  Jellyfin.Plugin.Ambilight.csproj  Plugin.cs  (+1 more)
(+113 files in other folders)
