[package]
name = "ambilight-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ffmpeg-next = "5.0"
imageproc = "0.23"
image = "0.24"
byteorder = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
pkg-config = "0.3"
